Using add-exports instead of add-opens
add-exports only exposes public members, which should suffice for the tests.