@@ -48,7 +48,7 @@ test {
   // for an explanation of why these are needed when running the tests on Java 17.
   jvmArgs = [
     '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
-    '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
-    '--add-opens=java.base/sun.security.action=ALL-UNNAMED'
+    '--add-exports=java.base/sun.util.calendar=ALL-UNNAMED',
+    '--add-exports=java.base/sun.security.action=ALL-UNNAMED'
   ]
 }
